# calc

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
src/: app.py  main.py
src/calc/: controllers.py  schemas.py  services.py
src/tests/: conftest.py  test_numbers.py  test_root.py
