[tool.poetry]
name = "calc"
version = "0.1.0"
description = ""
authors = ["Lucas Sousa <lucas103101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
