[tool.poetry]
name = "calc"
version = "0.1.0"
description = ""
authors = ["Lucas Sousa <lucas103101@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
pytest-asyncio = "^0.24.0"
asgi-lifespan = "^2.1.0"
pytest = "^8.3.3"
anyio = "^4.4.0"
pytest-trio = "^0.8.0"
aiohttp = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
